# myRP2040

./: .gitattributes  .gitignore  README.md
BlinkRAW/: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md  blink.s  main.c
Blink_CrystalOSC_NOSDK/: Makefile  README.md  blink_xosc.s  bs2_default.s  vector_table.s
Blink_CrystalOSC_PLL_NOSDK/: .asm-lsp.toml  Makefile  README.md  blink_xosc_pll.s
Blink_NOSDK/: Makefile  README.md  blink.s  linker_script.ld  vector_table.s
Blink_RingOSC1_NOSDK/: README.md  blink_ringosc.s  bs2_default.s
Blink_RingOSC2_NOSDK/: .asm-lsp.toml  Makefile  README.md  blink_ringosc.s  linker_script.ld
HelloWorld/: CMakeLists.txt  HelloWorld.S  Makefile  README.md
